--- a/blocks/section-title/_theme/section-title_theme_lead.css
+++ b/blocks/section-title/_theme/section-title_theme_lead.css
@@ -14,6 +14,18 @@
         margin-top: 48px;
     }
 }
+@media (max-width: 700px){
+    .section-title_theme_lead{
+        line-height: 70px;
+        font-size: 70px;
+    }
+}
+@media (max-width: 522px){
+    .section-title_theme_lead{
+        line-height: 48px;
+        font-size: 42px;
+    }
+}
 @media (max-width: 320px){
     .section-title_theme_lead{
         font-size: 40px;
