--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,9 +2,10 @@
     background-color: #2A2C2F;
     /* max-width: 1280px; */
     font-family: 'Inter', Arial, sans-serif;
+    max-width: 100%;
 }
-@media (max-width: 768px){
+/* @media (max-width: 768px){
     .page{
         width: 48em;
     }
-}
+} */
