--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,11 +1,30 @@
 .place__image{
     grid-row: 2/3;
     object-fit: cover;
-    width: 100%;
+    max-width: 100%;
 }
+@media screen and (max-width:768px){
+    .place__image{
+        max-width: 340px;
+    }
+}
+
+@media screen and (max-width:640px){
+    .place__image{
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width:438px){
+    .place__image{
+        max-width: 90%;
+    }
+}
+
 @media screen and (max-width:320px){
     .place__image{
         margin-top: 32px;
         padding: 0;
+        width: 288px;
     }
 }
