--- a/blocks/place/__paragraph/_first/place__paragraph-first.css
+++ b/blocks/place/__paragraph/_first/place__paragraph-first.css
@@ -3,6 +3,13 @@
     align-self:flex-start;
     margin: 0;
 }
+@media (max-width:438px){
+    .place__paragraph-first{
+        font-size: 12px;
+        line-height: 14px;
+    }
+}
+
 @media (max-width:320px){
     .place__paragraph_first{
         margin-top: 32px;
