--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -16,6 +16,14 @@
         line-height: 46px;
     }
 }
+@media (max-width:402px){
+    .place__title{
+        font-size: 12px;
+        line-height: 15px;
+        padding-left: 0;
+        margin-top: 10px;
+    }
+}
 @media (max-width:320px){
     .place__title{
         font-weight: 900;
