--- a/blocks/section-subtitle/_theme/section-subtitle_theme_cover.css
+++ b/blocks/section-subtitle/_theme/section-subtitle_theme_cover.css
@@ -8,6 +8,12 @@
     line-height: 22px;
     color: #fff;
 }
+@media (max-width:507px){
+    .section-subtitle_theme_cover{
+        font-size: 22px;
+    }
+}
+
 @media (max-width:320px){
     .section-subtitle_theme_cover{
         font-size: 14px;
