--- a/blocks/section-title/_theme/section-title_theme_cover.css
+++ b/blocks/section-title/_theme/section-title_theme_cover.css
@@ -9,6 +9,16 @@
     color: #fff;
     
 }
+
+@media (max-width:507px){
+    .section-title_theme_cover{
+        font-size: 32px;
+        line-height: 35px;
+        margin-top: 33px;
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
 @media (max-width:320px){
     .section-title_theme_cover{
         font-size: 32px;
