--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -10,6 +10,7 @@
         display: block;
         padding-top: 64px;
         padding-left: 16px;
+        padding-bottom:24px;
         
     }
 }
