--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,6 +7,13 @@
     text-decoration:none;
     margin-left: 18px;
 }
+.footer__link:hover{
+    opacity: 0.8;
+}
+.footer__link:first-child{
+    margin-left: 0;
+}
+
 .footer__link:last-child(5){
     margin-left: 0;
 }
