--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,11 +8,17 @@
     gap: 16px;
     justify-content: center;
 }
+@media screen and (max-width:768px){
+    .photo-grid{
+        margin-left: 24px;
+        margin-right: 24px;
+    }
+}
 
 @media screen and (max-width:320px){
     .photo-grid{
         margin-top: 88px;
-        margin-left: 24px;
-        margin-right: 24px;
+        margin-left: 16px;
+        margin-right: 16px;
     }
 }
