--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,13 +7,20 @@
     line-height: 29px;
     text-align: left;
 }
-
 @media (max-width:768px){
     .place__paragraph{
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
-        line-height: 26px;
+        line-height: 163%;
     }
-   
+}
+
+@media (max-width:320px){
+    .place__paragraph{
+        margin-left: 0;
+        margin-top: 32px;
+        padding-left: 16px;
+        padding-right: 16px;
+    }  
 }
