--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,8 @@
     margin:0 auto;
     color: #ffffff;
     display: grid;
-    grid-template-columns: repeat( auto-fill,minmax(484px, 1fr));
+    /* grid-template-columns: repeat( auto-fill,minmax(484px, 1fr)); */
+    grid-template-columns: repeat(2, 1fr);
     row-gap: 48px;
     column-gap: 40px;
     padding-bottom: 80px;
@@ -31,19 +32,11 @@
     }
 }
 
-@media screen and (max-width:640px){
+@media screen and (max-width:650px){
     .place{
-        grid-template-columns:1fr;
+        display: block;
     }
 }
-
-@media screen and (max-width:392px){
-    .place{
-        grid-template-columns:1fr;
-        gap: 5px;
-    }
-}
-
 
 @media screen and (max-width:320px){
     .place{
