--- a/blocks/section-title/_theme/section-title_theme_lead.css
+++ b/blocks/section-title/_theme/section-title_theme_lead.css
@@ -8,6 +8,11 @@
     width: 100%;
     height: auto;
 }
+@media (max-width: 1280px){
+    .section-title_theme_lead{
+        max-width:700px;
+    }
+}
 
 @media (max-width: 1024px){
     .section-title_theme_lead{
