--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover{
     margin: 92px auto 0 auto;
     max-width: 1184px;
-    background-image:url("../../../images/cover-trains.jpg");
+    background-image: url("../../images/cover-trains.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
