--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,13 @@
 .footer{
     max-width: 1184px;
-    margin: 92px 48px 0 48px;
+    margin-top: 92px;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media (max-width:1280px){
+    .footer{
+        margin: 92px 48px 0 48px;
+    }
 }
 @media (max-width:768px){
     .footer{
