--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,4 +1,5 @@
 .cover__background{
+    position: relative;
     text-decoration: none;
     display: flex;
     flex-direction: column;
@@ -7,22 +8,22 @@
     margin: 0 auto;
     max-width: 92.5vw;
     min-height: 57.81vw;
+    z-index: 0;
 }
-.cover__background:hover {
-    opacity: 0.8;
-    background: #2A2C2F;
-}
+
+
 
 @media screen and (max-width: 1024px){
     .cover__background {
         max-width: 100vw;
-        max-height: 62.5vw;
+        height: 640px;
     }
 
 }
 @media screen and (max-width: 768px){
     .cover__background {
-        max-width: 100%;
+        max-width: 100vw;
+        height: 480px;
     }
 
 }
