--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,7 +5,26 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: 0;
 }
+.cover::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: #2A2C2F;
+    opacity: 0.3;
+    z-index: -1;
+    transition: all .5s;
+}
+.cover:hover:before {
+    background: #2A2C2F;
+    opacity: 0.8;
+  }
+  
 
 @media screen and (max-width: 768px) {
     .cover {
