--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,6 +6,10 @@
     color: #fff;
     text-decoration: none;
 }
+.header__lang-link:hover{
+    text-decoration-line: underline;
+    opacity: 0.8;
+}
 @media screen and (max-width: 320px){
     .header__lang-link{
         font-size: 18px;
