--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,18 +1,12 @@
 .intro__list{
-    list-style-type: none;
+    font-family: Inter;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
     line-height: 18px;
+    list-style-type: none;
     color: #FFFFFF;
     margin-top: 33px;
     margin-bottom: 0;
     padding-left:0;
-}
-@media screen and (max-width: 320px){
-    .intro__list {
-
-        padding-left: 16px;
-        padding-right: 16px;
-    }
 }
