--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,3 +5,10 @@
     line-height: 163%;
     color: #FFFFFF;
 }
+
+@media (max-width: 320px){
+    .intro__text{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
