--- a/blocks/place/__paragraph-main/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph-main/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph{
-    margin-top: 26px;
+    margin-top: 0;
     margin-bottom: 0;
     color: #FFFFFF;
     align-self:flex-start;
@@ -8,6 +8,9 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 163%;
+}
+.place__paragraph:last-child{
+    margin-top: 26px;
 }
 
 @media (max-width:768px){
